# CLI_Warehouse

./: CMakeLists.txt  item.cpp  item.h  item.txt  main.cpp  string_processor.cpp  string_processor.h  user.txt
controller/: auth_controller.cpp  auth_controller.h  user_controller.cpp  user_controller.h  warehouse_controller.cpp  warehouse_controller.h
global/: error_handler.cpp  error_handler.h  string_processor.cpp  string_processor.h
handler/: output_handler.cpp  output_handler.h  string_handler.cpp  string_handler.h
model/: item_model.cpp  item_model.h  user_model.cpp  user_model.h  warehouse_model.cpp  warehouse_model.h
view/: auth_view.cpp  auth_view.h  io_view.cpp  io_view.h  view.cpp  view.h  warehouse_view.cpp  warehouse_view.h
